# dymfile

./: .flake8  .gitignore  .pre-commit-config.yaml  .sourcery.yaml  CONTRIBUTING.md  INSTALL.md  README.md  THANKS.md  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: black.yml  lint_flake8.yml  python-app.yml
notebook/: dymfile_buffer.ipynb  dymfile_file.ipynb  to_dymfile.ipynb
requirements/: requirements_dev.txt
scripts/: dymtonetcdf.py
src/dymfile/: dym2todataarray.py  dymfile.py
src/dymfile/core/: dym.py  dym2.py  dymfile_loading.py  dymfile_tools.py  utilities.py
src/dymfile/from_Inna_R/: dymfile.py  dymfile_loading.py  dymfile_tools.py
src/dymfile/scripts/: dymtonetcdf.py
src/dymfiles/: dym2todataarray.py
src/dymfiles/core/: dym2.py  utilities.py
src/dymfiles/scripts/: dymtonetcdf.py
src/old_dymfile/: dym2todataarray.py
test/: test_dym.py  test_utilities.py
