[project]
name = "dymfile"
version = "0.1.0"
description = "Manage DYM file format from SEAPODYM project."
authors = [{ name = "Ash", email = "lehodey.jules@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.2.4,<3.0.0)",
    "netcdf4 (>=1.7.2,<2.0.0)",
    "xarray (>=2025.3.0,<2026.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "cartopy (>=0.24.1,<0.25.0)",
    "hvplot (>=0.11.2,<0.12.0)",
    "geoviews (>=1.14.0,<2.0.0)",
    "jupyter-bokeh (>=4.0.5,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
